<resources>
    <string name="app_name">LostFinder</string>
    <string name="location_notification_title">LostFinder</string>
    <string name="activity_toolbar_map">
        Map
    </string>
    <string name="activity_toolbar_chat">
        Messages
    </string>
    <string name="activity_toolbar_alert">
        Alerts
    </string>
    <string name="activity_toolbar_weather">
        Weather
    </string>
    <string name="activity_toolbar_user">
        User
    </string>
    <string name="activity_toolbar_settings">
        Settings
    </string>
    <string name="location_notification_message">
        Your location is used to track your movement.
    </string>
    <string name="location_notification_channel_name">
        Location
    </string>
    <string name="location_notification_channel_description">
        Location service notification
    </string>
    <string name="denied_location_permission_msg">
        Without location permission application will not work properly.
        Your location is needed to take part in lost finding.
        Restart application and accept requested permission.
    </string>
    <string name="activity_map_current_location_marker_title">Me</string>
    <string name="desc_center_map_user_location">Center map to user location</string>
    <string name="activity_map_chosen_location_title">Chosen location</string>
    <string name="email">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="server_password">Server password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account_type">com.github.mmodzel3.lostfinder</string>
    <string name="token_type">jwt</string>
    <string name="err_login_access">Problem with connection to server.</string>
    <string name="err_login_invalid_credentials">Invalid login or password. Try again.</string>
    <string name="err_login_account_blocked">Your account is blocked. You cannot log in to your account.</string>
    <string name="err_login">Problem while trying to login to server.</string>
    <string name="err_fetching">Problem with fetching data. Try checking your connection.</string>
    <string name="err_invalid_token">Token expired. Log in to the server once again.</string>
    <string name="msg_fetching">Data is downloaded from the server.</string>
    <string name="role_user">User</string>
    <string name="role_manager">Manager</string>
    <string name="role_owner">Owner</string>
    <string name="location_err_endpoint_access">
        Problem with sending location to server. Check your internet connection.
    </string>
    <string name="location_err_location_sharing_unavailable">
        Sharing current location is unavailable.
        Turn on localization with GPS in your mobile phone and enable sharing location in application\'s settings.
    </string>
    <string name="activity_chat_enter_message">
        Enter message
    </string>
    <string name="activity_chat_send">
        Send
    </string>
    <string name="activity_chat_msg_example_name">
        Bob
    </string>
    <string name="activity_chat_msg_example_text">
        Hello, how are you?
    </string>
    <string name="activity_chat_msg_example_time">
        17:45
    </string>
    <string name="activity_chat_msg_me">
        Me
    </string>
    <string name="activity_chat_err_sending_msg_api_access_problem">
        Problem with sending message. Check your internet connection.
    </string>
    <string name="activity_chat_err_sending_msg_invalid_token">
        Problem with sending message. Your session is expired. Log in to account once again.
    </string>
    <string name="activity_chat_err_fetching_msg_api_access_problem">
        Problem with fetching messages. Check your internet connection.
    </string>
    <string name="activity_chat_err_fetching_msg_invalid_token">
        Problem with fetching messages. Your session is expired. Log in to account once again.
    </string>
    <string name="activity_alert_info_user_name_example_text">
        Bob
    </string>
    <string name="activity_alert_info_title_example_text">
        Help
    </string>
    <string name="activity_alert_info_example_time_text">
        17:45
    </string>
    <string name="activity_alert_info_location_example_text">
        (51.0, 52.3)
    </string>
    <string name="activity_alert_info_range_example_text">
        180 m
    </string>
    <string name="activity_alert_info_distance_text">
        m
    </string>
    <string name="activity_alert_info_description_example_text">
        Long text description that contains example information. It is for show purpose.
    </string>
    <string name="activity_alert_info_bt_end_alert_description">
        End alert
    </string>
    <string name="activity_alert_err_fetching_alerts_api_access_problem">
        Problem with fetching alerts. Check your internet connection.
    </string>
    <string name="activity_alert_err_fetching_alerts_invalid_token">
        Problem with fetching alerts. Your session is expired. Log in to account once again.
    </string>
    <string name="activity_alert_err_end_alert_invalid_token">
        Problem with ending alert. Your session is expired. Log in to account once again.
    </string>
    <string name="activity_alert_err_end_alert_api_access_problem">
        Problem with ending alert. Check your internet connection.
    </string>
    <string name="activity_alert_err_end_alert_invalid_permission">
        Problem with ending alert. You do not have permission to end it.
    </string>
    <string name="activity_alert_err_end_alert_not_found">
        Problem with ending alert. Alert does not exist.
    </string>
    <string-array name="activity_alert_add_predefined_user">
        <item>Help!</item>
        <item>Animal!</item>
        <item>Found something!</item>
        <item>Found lost!</item>
        <item>Found witness!</item>
        <item>Lost!</item>
    </string-array>
    <string-array name="activity_alert_add_predefined_manager">
        <item>Help!</item>
        <item>Animal!</item>
        <item>Found something!</item>
        <item>Found lost!</item>
        <item>Found witness!</item>
        <item>Lost!</item>
        <item>Search!</item>
        <item>Gather!</item>
    </string-array>
    <string-array name="activity_alert_add_predefined_owner">
        <item>Help!</item>
        <item>Animal!</item>
        <item>Found something!</item>
        <item>Found lost!</item>
        <item>Found witness!</item>
        <item>Lost!</item>
        <item>Search!</item>
        <item>Gather!</item>
    </string-array>
    <string name="activity_alert_add_title">
        Title
    </string>
    <string name="activity_alert_add_title_hint">
        Enter title of alert.
    </string>
    <string name="activity_alert_add_description">
        Description
    </string>
    <string name="activity_alert_add_description_hint">
        Enter description of alert or leave blank.
    </string>
    <string name="activity_alert_add_range">
        Range
    </string>
    <string name="activity_alert_add_range_hint">
        180
    </string>
    <string name="activity_alert_add_distance">
        m
    </string>
    <string name="activity_alert_add_location">
        Location
    </string>
    <string name="activity_alert_add_longitude">
        Longitude
    </string>
    <string name="activity_alert_add_latitude">
        Latitude
    </string>
    <string name="activity_alert_add_longitude_hint">
        52.12
    </string>
    <string name="activity_alert_add_latitude_hint">
        21.55
    </string>
    <string name="activity_alert_add_choose_location_button_desc">
        Choose location on map
    </string>
    <string name="activity_alert_add_add_button">
        Send
    </string>
    <string name="activity_alert_add_err_add_alert_api_access_problem">
        Problem with sending alert. Check your internet connection.
    </string>
    <string name="activity_alert_add_err_add_alert_invalid_token">
        Problem with sending alert. Your session is expired. Log in to account once again.
    </string>
    <string name="activity_alert_add_msg_add_alert_success">
        Alert was sent to server.
    </string>
    <string name="activity_alert_add_err_add_alert_invalid_permission">
        You do not have permission to send alert.
    </string>
    <string name="activity_map_add_alert_desc">
        Add alert
    </string>
    <string name="activity_choose_location_map_confirm_desc">
        Confirm location
    </string>
    <string name="activity_choose_location_map_cancel_desc">
        Cancel
    </string>
    <string name="activity_choose_location_map_info_set">
        Tap on the map to choose location and click confirm button.
    </string>
    <string name="activity_choose_location_map_default_location_accuracy_desc">
        (default current location\'s accuracy)
    </string>
    <string name="activity_choose_location_map_default_accuracy_desc">
        (default current location)
    </string>
    <string name="chat_message_notification_channel_name">
        Chat messages
    </string>
    <string name="chat_message_notification_channel_description">
        Chat messages notification description
    </string>
    <string name="alert_notification_channel_name">
        Alerts
    </string>
    <string name="alert_notification_channel_description">
        Alerts notification description
    </string>
    <string name="alert_notification_start_alert_title_prefix">
        Start:
    </string>
    <string name="alert_notification_end_alert_title_prefix">
        End:
    </string>
    <string name="alert_notification_title_from">
        from
    </string>
    <string name="chat_message_notification_title_prefix">
        Message from
    </string>
    <string name="activity_toolbar_logout">Logout</string>
    <string name="activity_user_info_user_desc">
        User
    </string>
    <string name="activity_user_info_example_username">
        Bob
    </string>
    <string name="activity_user_info_example_email">
        example@example.com
    </string>
    <string name="activity_user_info_role">
        Role:
    </string>
    <string name="activity_user_info_example_role">
        Owner
    </string>
    <string name="activity_user_info_last_login">
        Last login:
    </string>
    <string name="activity_user_info_example_last_login">
        2020-12-12 15:16:00
    </string>
    <string name="activity_user_info_increase_permissions_desc">
        Increase permissions
    </string>
    <string name="activity_user_info_decrease_permissions_desc">
        Decrease permissions
    </string>
    <string name="activity_user_info_block_account_desc">
        Block account
    </string>
    <string name="activity_user_info_unblock_account_desc">
        Unblock account
    </string>
    <string name="activity_user_info_delete_account_desc">
        Delete account
    </string>
    <string name="activity_settings_user_desc">
        User
    </string>
    <string name="activity_settings_username">
        Username:
    </string>
    <string name="activity_settings_username_example">
        Bob
    </string>
    <string name="activity_settings_email">
        Email:
    </string>
    <string name="activity_settings_email_example">
        example@example.com
    </string>
    <string name="activity_settings_sharing_location">
        Sharing location
    </string>
    <string name="activity_settings_change_password">
        Change password
    </string>
    <string name="activity_settings_delete_account">
        Delete account
    </string>
</resources>