<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/activity_toolbar_it_alert"
        android:icon="@drawable/ic_white_alert"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_alert" />

    <item
        android:id="@+id/activity_toolbar_it_chat"
        android:icon="@drawable/ic_message"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_chat" />

    <item
        android:id="@+id/activity_toolbar_it_map"
        android:icon="@drawable/ic_user_location_center"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_map" />

    <item
        android:id="@+id/activity_toolbar_it_weather"
        android:icon="@drawable/ic_weather"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_weather" />

    <item
        android:id="@+id/activity_toolbar_it_change_password"
        android:icon="@drawable/ic_change_password"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_change_password" />

    <item
        android:id="@+id/activity_toolbar_it_logout"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"
        android:title="@string/activity_toolbar_logout" />
</menu>