<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/ic_purple_rounded_rectangle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_alert_info_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/activity_alert_info_example_time_text"
            android:textColor="@color/gray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/activity_alert_info_tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/activity_alert_info_user_name_example_text"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_alert_info_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_alert_info_title_example_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawablePadding="4dp"
            android:textColor="@color/white"
            app:drawableLeftCompat="@drawable/ic_yellow_alert"
            app:drawableStartCompat="@drawable/ic_yellow_alert" />

        <ImageButton
            android:id="@+id/activity_alert_info_bt_end_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/ic_gray_rounded_corners"
            android:contentDescription="@string/activity_alert_info_bt_end_alert_description"
            android:src="@drawable/ic_white_cancel" />

    </LinearLayout>

    <View
        android:id="@+id/activity_alert_info_vw_splitter"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/activity_alert_info_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:padding="12dp"
        android:text="@string/activity_alert_info_description_example_text"
        android:textSize="14sp"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_alert_info_tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:gravity="end"
            android:text="@string/activity_alert_info_location_example_text"
            android:textSize="12sp"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/activity_alert_info_tv_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/activity_alert_info_range_example_text"
            android:textSize="12sp"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>