<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/activity_chat_msg_tv_user_name"
            android:text="@string/activity_chat_msg_example_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_chat_msg_tv_text"
                android:text="@string/activity_chat_msg_example_text"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:background="@drawable/ic_gray_rounded_rectangle"
                android:padding="12dp" />

            <TextView
                android:id="@+id/activity_chat_msg_tv_time"
                android:text="@string/activity_chat_msg_example_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="0"
                android:gravity="bottom" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>